Help up calculator to walk
- Refine JS code to allow calculator to walk for
first time. Now its time, to make tweaks on its
suspicious form. We will lay solid foundations, the
goal is to forge it into a formidable SPRINTER.

Need to:
- enable `Del` feature, akin to undo.
- alert error message if attempt to divide by 0 is
made.
- enable decimal point usage. round answers with
long decimals to prevent screen overflow.

--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,8 @@ body{
 .calculator-brand{
     /* border: red 1px solid; */
     align-self: flex-end;
+
+    font-size: larger;
 }
 
 .calculator-screen {
@@ -96,6 +98,8 @@ button{
     background-color: rgba(255, 115, 0, 0.842);
     color: black;
     border-radius: 15px 15px 25px 25px;
+
+    font-weight: 600;
 }
 
 
