--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
 body{
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items:center;
     
     margin-top: 100px;
